fixed text align problem

--- a/stylesheet(TB).css
+++ b/stylesheet(TB).css
@@ -30,8 +30,8 @@ p{
     color:#020202;
     padding: 1.7px;
     font-size: 120%;
-    text-align: center;
-    width: 40em;
+    width: 50em;
+    margin: auto;
 }
 
 
